# simplified-variants-examples

simplified-variants/lib1/: dune  lib1.ml
simplified-variants/lib2/: lib2.ml
simplified-variants/otherlibs/systhreads/: dune  st_stubs.c
simplified-variants/otherlibs/systhreads/byte/: dune
simplified-variants/otherlibs/systhreads/native/: dune
simplified-variants/toplevel/: dune  topcommon.ml  topeval.mli  topstart_byte.ml
simplified-variants/toplevel/byte/: dune  topeval.ml
simplified-variants/toplevel/native/: dune  topeval.ml
